# content-based-image-retrieval

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: distance.h  features.h  utils.h
results/: README.md
src/: compare_embeddings.cpp  distance.cpp  embedding_extractor.cpp  features.cpp  gui_query.cpp  main_extract_features.cpp  main_query.cpp  utils.cpp
